--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="#">services</a>
+<a href="#">Home</a>
+<a href="#">About</a>
 
 <body>
     <h2>this is develop file</h2>
